explicitly set ubuntu version / add build to matrix for osmesa

--- a/.github/workflows/Create_Release.yml
+++ b/.github/workflows/Create_Release.yml
@@ -19,8 +19,12 @@ jobs:
     strategy:
       matrix:
         config:
-          - os: ubuntu-latest
+          - os: ubuntu-18.04
             type: linux
+
+          - os: ubuntu-18.04
+            type: linux
+            flag: osmesa
 
           - os: Nvidia
             type: linux
