--- a/.github/workflows/Build_Linux.yml
+++ b/.github/workflows/Build_Linux.yml
@@ -16,10 +16,10 @@ jobs:
     strategy:
       matrix:
         config:
-          - os: ubuntu-18.04
+          - os: ubuntu-latest
             type: linux
             
-          - os: ubuntu-18.04
+          - os: ubuntu-latest
             type: linux
             flag: osmesa
 
@@ -43,7 +43,9 @@ jobs:
   
       - name: Install Github Packages
         working-directory: ${{ env.project }}.Package/
-        run: npm i
+        run: |
+          npm install
+          npm list
         env:
           NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
 
