--- a/.github/workflows/Create_Release.yml
+++ b/.github/workflows/Create_Release.yml
@@ -19,10 +19,10 @@ jobs:
     strategy:
       matrix:
         config:
-          - os: ubuntu-18.04
+          - os: ubuntu-latest
             type: linux
 
-          - os: ubuntu-18.04
+          - os: ubuntu-latest
             type: linux
             flag: osmesa
 
