Renamed osx scheme to PopEngine_Osx

--- a/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_OsxChakra.xcscheme
+++ b/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_OsxChakra.xcscheme
@@ -27,8 +27,6 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-      </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
@@ -38,14 +36,15 @@
             ReferencedContainer = "container:PopEngine.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
+      <Testables>
+      </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug_V8"
+      buildConfiguration = "Debug_Chakra"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      disableMainThreadChecker = "YES"
+      enableAddressSanitizer = "YES"
+      enableASanStackUseAfterReturn = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       customWorkingDirectory = "$PROJECT_DIR/"
@@ -66,7 +65,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "/Volumes/Code/Tarquini_AcidSea AutoStart ShortOcean"
+            argument = "/Volumes/Code/PopEngine/UnitTest/"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
@@ -75,10 +74,6 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "/Volumes/Code/PopRayTrace/"
-            isEnabled = "YES">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = "/Volumes/Code/PopEngine/UnitTest/CameraTest"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
@@ -102,6 +97,11 @@
          </EnvironmentVariable>
       </EnvironmentVariables>
       <AdditionalOptions>
+         <AdditionalOption
+            key = "MallocScribble"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
