--- a/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_OsxV8.xcscheme
+++ b/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_OsxV8.xcscheme
@@ -27,8 +27,6 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-      </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
@@ -38,15 +36,14 @@
             ReferencedContainer = "container:PopEngine.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
+      <Testables>
+      </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug_Chakra"
+      buildConfiguration = "Debug_V8"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      enableAddressSanitizer = "YES"
-      enableASanStackUseAfterReturn = "YES"
+      disableMainThreadChecker = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       customWorkingDirectory = "$PROJECT_DIR/"
@@ -67,7 +64,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "/Volumes/Code/PopEngine/UnitTest/"
+            argument = "/Volumes/Code/Tarquini_AcidSea AutoStart ShortOcean"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
@@ -76,6 +73,10 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "/Volumes/Code/PopRayTrace/"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "/Volumes/Code/PopEngine/UnitTest/CameraTest"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
@@ -98,13 +99,6 @@
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
-      <AdditionalOptions>
-         <AdditionalOption
-            key = "MallocScribble"
-            value = ""
-            isEnabled = "YES">
-         </AdditionalOption>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
