--- a/Source_App/PopEngineApp_Ios_Info.plist
+++ b/Source_App/PopEngineApp_Ios_Info.plist
@@ -22,13 +22,23 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>Record the camera!</string>
-	<key>NSMainStoryboardFile</key>
-	<string>Main</string>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIMainStoryboardFile</key>
-	<string>PopCap</string>
-	<key>UIRequiredDeviceCapabilities</key>
+	<key>UIApplicationSceneManifest</key>
+	<dict>
+		<key>UIApplicationSupportsMultipleScenes</key>
+		<false/>
+		<key>UISceneConfigurations</key>
+		<dict>
+			<key>UIWindowSceneSessionRoleApplication</key>
+			<array>
+				<dict>
+					<key>UISceneConfigurationName</key>
+					<string>Default Configuration</string>
+					<key>UISceneDelegateClassName</key>
+					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
+				</dict>
+			</array>
+		</dict>
+	</dict>	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
