Turned off dead code stripping. This was stripping out my swift control classes

--- a/Source_Ios/PopEngine_Ios.xcconfig
+++ b/Source_Ios/PopEngine_Ios.xcconfig
@@ -28,3 +28,4 @@ LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS) $(inherited) $(LEAPMOTION_LIB_PAT
 
 //VERSIONING_SYSTEM = apple-generic
 
+EMBEDDED_CONTENT_CONTAINS_SWIFT = YES
