--- a/Source_Osx/PopEngine.xcconfig
+++ b/Source_Osx/PopEngine.xcconfig
@@ -34,3 +34,5 @@ VERSIONING_SYSTEM = apple-generic
 
 //	10.13 for coreml
 MACOSX_DEPLOYMENT_TARGET = 10.13
+
+EMBEDDED_CONTENT_CONTAINS_SWIFT = YES
