update setup nuget action
Previous one was deprecated https://github.com/warrenbuckley/Setup-Nuget

--- a/.github/workflows/Build_Windows.yml
+++ b/.github/workflows/Build_Windows.yml
@@ -39,7 +39,7 @@ jobs:
           ls -R Libs
 
       - name: Setup Nuget
-        uses: warrenbuckley/Setup-Nuget@v1
+        uses: nuget/setup-nuget@v1
   
       - name: Setup msbuild
         uses: microsoft/setup-msbuild@v1.0.0
