--- a/Source_Osx/PopEngine.xcconfig
+++ b/Source_Osx/PopEngine.xcconfig
@@ -22,7 +22,7 @@ GLFW_PATH = /usr/local/Cellar/glfw/3.3.2
 
 //	for some reason osx build just didnt want to find this automatically...
 POPCAMERADEVICE_INCLUDE_PATH = $(MODULES_PATH)/popcameradevice/PopCameraDevice.xcframework/macos-x86_64/PopCameraDevice_Osx.framework/Headers/
-POPH264_INCLUDE_PATH = $(MODULES_PATH)/poph264/PopH264.xcframework/macos-x86_64/PopH264_Osx.framework/Headers/
+POPH264_INCLUDE_PATH = $(MODULES_PATH)/com.newchromantics.poph264/PopH264.xcframework/macos-x86_64/PopH264_Osx.framework/Headers/
 
 HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(SOYLIB_PATH) $(OPENCV_PATH)/include $(OPENXR_PATH) $(OPENCV_CONTRIB_PATH) $(MAGIC_LEAP_PATH)/include $(MODULES_PATH)/** $(POPCAMERADEVICE_INCLUDE_PATH) $(POPH264_INCLUDE_PATH)
 FRAMEWORK_SEARCH_PATHS = $(FRAMEWORK_SEARCH_PATHS) $(MODULES_PATH)/** $(OPENVR_PATH)
