--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -32,7 +32,7 @@
     <ClInclude Include="..\PopEngine.Package\node_modules\%40newchromantics\popcameradevice\windows\Debug_x64\PopCameraDevice.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|x64'">true</ExcludedFromBuild>
     </ClInclude>
-    <ClInclude Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264.h">
+    <ClInclude Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|x64'">true</ExcludedFromBuild>
     </ClInclude>
     <ClInclude Include="..\src\ChakraBind.h" />
@@ -369,7 +369,7 @@
     <None Include="..\PopEngine.Package\node_modules\%40newchromantics\popcameradevice\windows\Debug_x64\PopCameraDeviceTest.pdb">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|x64'">true</ExcludedFromBuild>
     </None>
-    <CopyFileToFolders Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264.dll">
+    <CopyFileToFolders Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264.dll">
       <FileType>Document</FileType>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master_JsCore|x64'">true</DeploymentContent>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug_V8|x64'">true</DeploymentContent>
@@ -379,25 +379,25 @@
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master_V8|x64'">true</DeploymentContent>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|x64'">true</ExcludedFromBuild>
     </CopyFileToFolders>
-    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264.exp">
+    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264.exp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|x64'">true</ExcludedFromBuild>
     </None>
-    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264.pdb">
+    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264.pdb">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|x64'">true</ExcludedFromBuild>
     </None>
-    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264_TestApp.exe">
+    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264_TestApp.exe">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|x64'">true</ExcludedFromBuild>
     </None>
-    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264_TestApp.iobj">
+    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264_TestApp.iobj">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|x64'">true</ExcludedFromBuild>
     </None>
-    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264_TestApp.ipdb">
+    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264_TestApp.ipdb">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|x64'">true</ExcludedFromBuild>
     </None>
-    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264_TestApp.pdb">
+    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264_TestApp.pdb">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|x64'">true</ExcludedFromBuild>
     </None>
-    <CopyFileToFolders Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\x264.dll">
+    <CopyFileToFolders Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\x264.dll">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master_JsCore|x64'">true</DeploymentContent>
       <FileType>Document</FileType>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug_V8|x64'">true</DeploymentContent>
@@ -705,7 +705,7 @@
     <Library Include="..\PopEngine.Package\node_modules\%40newchromantics\popcameradevice\windows\Debug_x64\PopCameraDevice.lib">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|x64'">true</ExcludedFromBuild>
     </Library>
-    <Library Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264.lib">
+    <Library Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264.lib">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_NoDependencies|x64'">true</ExcludedFromBuild>
     </Library>
     <Library Include="..\src\Libs\dyncall\lib\libdyncallback_s.lib" />
