--- a/PopEngine.visualstudio/PopEngine.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine.vcxproj.filters
@@ -297,7 +297,7 @@
     <ClInclude Include="..\src\MagicEnum\include\magic_enum.hpp">
       <Filter>SoyLib\MagicEnum</Filter>
     </ClInclude>
-    <ClInclude Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264.h">
+    <ClInclude Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264.h">
       <Filter>Libs\poph264</Filter>
     </ClInclude>
     <ClInclude Include="..\PopEngine.Package\node_modules\%40newchromantics\popcameradevice\windows\Debug_x64\PopCameraDevice.h">
@@ -674,22 +674,22 @@
       <Filter>UnitTest\Midi</Filter>
     </None>
     <None Include="$(OpenXRLoaderBinaryRoot)\bin\openxr_loader.dll" />
-    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264.exp">
+    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264.exp">
       <Filter>Libs\poph264</Filter>
     </None>
-    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264.pdb">
+    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264.pdb">
       <Filter>Libs\poph264</Filter>
     </None>
-    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264_TestApp.exe">
+    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264_TestApp.exe">
       <Filter>Libs\poph264</Filter>
     </None>
-    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264_TestApp.iobj">
+    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264_TestApp.iobj">
       <Filter>Libs\poph264</Filter>
     </None>
-    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264_TestApp.ipdb">
+    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264_TestApp.ipdb">
       <Filter>Libs\poph264</Filter>
     </None>
-    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264_TestApp.pdb">
+    <None Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264_TestApp.pdb">
       <Filter>Libs\poph264</Filter>
     </None>
     <None Include="..\PopEngine.Package\node_modules\%40newchromantics\popcameradevice\windows\Debug_x64\PopCameraDevice.cs">
@@ -1008,7 +1008,7 @@
     </Font>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264.lib">
+    <Library Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264.lib">
       <Filter>Libs\poph264</Filter>
     </Library>
     <Library Include="..\PopEngine.Package\node_modules\%40newchromantics\popcameradevice\windows\Debug_x64\PopCameraDevice.lib">
@@ -1030,7 +1030,7 @@
     <CopyFileToFolders Include="..\PopEngine.Package\node_modules\%40newchromantics\popcameradevice\windows\Debug_x64\freenect2.dll" />
     <CopyFileToFolders Include="..\PopEngine.Package\node_modules\%40newchromantics\popcameradevice\windows\Debug_x64\k4a.dll" />
     <CopyFileToFolders Include="..\PopEngine.Package\node_modules\%40newchromantics\popcameradevice\windows\Debug_x64\PopCameraDevice.dll" />
-    <CopyFileToFolders Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\PopH264.dll" />
-    <CopyFileToFolders Include="..\PopEngine.Package\node_modules\%40newchromantics\poph264\windows\Release_x64\x264.dll" />
+    <CopyFileToFolders Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\PopH264.dll" />
+    <CopyFileToFolders Include="..\PopEngine.Package\node_modules\%40newchromantics\com.newchromantics.poph264\windows\Release_x64\x264.dll" />
   </ItemGroup>
 </Project>
