Build for distribution + add platform name to objroot

--- a/Source_Ios/PopEngine_Ios.xcconfig
+++ b/Source_Ios/PopEngine_Ios.xcconfig
@@ -29,3 +29,6 @@ LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS) $(inherited) $(LEAPMOTION_LIB_PAT
 //VERSIONING_SYSTEM = apple-generic
 
 EMBEDDED_CONTENT_CONTAINS_SWIFT = YES
+
+// tsdk: Mirroring config from PopH264
+BUILD_LIBRARY_FOR_DISTRIBUTION = YES
