--- a/Source_Osx/PopEngine.xcconfig
+++ b/Source_Osx/PopEngine.xcconfig
@@ -36,3 +36,6 @@ VERSIONING_SYSTEM = apple-generic
 MACOSX_DEPLOYMENT_TARGET = 10.13
 
 EMBEDDED_CONTENT_CONTAINS_SWIFT = YES
+
+// tsdk: Mirroring config from PopH264
+BUILD_LIBRARY_FOR_DISTRIBUTION = YES
