--- a/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_Osx.xcscheme
+++ b/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_Osx.xcscheme
@@ -41,8 +41,7 @@
       customWorkingDirectory = "$PROJECT_DIR/"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
-      stopOnEveryUBSanitizerIssue = "YES"
-      stopOnEveryMainThreadCheckerIssue = "YES"
+      migratedStopOnEveryIssue = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
@@ -57,7 +56,23 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
+            argument = "$(SRCROOT)/UnitTest/HelloModule"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "/Volumes/Code/PopNotPoker/Server"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "$(SRCROOT)/UnitTest/HelloModule"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "/Volumes/Code/PopExposeXr"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "/Volumes/Code/PopNotPoker/Server"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
@@ -66,14 +81,6 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "/Volumes/Code/PopCave/PopCave"
-            isEnabled = "YES">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = "/Volumes/Code/Tarquini_AcidSea Debug"
-            isEnabled = "YES">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = "/Volumes/Code/PopEngine/UnitTest/CoremlPersonDetection"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
