--- a/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_OsxChakra.xcscheme
+++ b/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_OsxChakra.xcscheme
@@ -51,6 +51,7 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       stopOnEveryMainThreadCheckerIssue = "YES"
+      migratedStopOnEveryIssue = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
