--- a/.github/workflows/Build_Windows.yml
+++ b/.github/workflows/Build_Windows.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   Build:
-    runs-on: [self-hosted, windows]
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v2
