--- a/.github/workflows/Create_Release.yml
+++ b/.github/workflows/Create_Release.yml
@@ -32,7 +32,7 @@ jobs:
           # - os: Pi4
           #   type: linux
 
-          - os: windows-latest
+          - os: windows
             type: windows
 
           # ios & osx universal build
