--- a/.github/workflows/Create_Release.yml
+++ b/.github/workflows/Create_Release.yml
@@ -32,7 +32,7 @@ jobs:
           # - os: Pi4
           #   type: linux
 
-          - os: windows
+          - os: windows-latest
             type: windows
 
           # ios & osx universal build
@@ -67,15 +67,15 @@ jobs:
           NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
 
       - name: Setup nuget (Windows)
-        if: matrix.config.os == 'windows'
+        if: matrix.config.os == 'windows' || matrix.config.os == 'windows-latest'
         uses: nuget/setup-nuget@v1
         
       - name: Setup msbuild (Windows)
-        if: matrix.config.os == 'windows'
+        if: matrix.config.os == 'windows' || matrix.config.os == 'windows-latest'
         uses: microsoft/setup-msbuild@v1.0.2
 
       - name: Build Windows
-        if: matrix.config.os == 'windows'
+        if: matrix.config.os == 'windows' || matrix.config.os == 'windows-latest'
         uses: NewChromantics/PopAction_BuildWindows@v1
         with:
           BuildPlatform: x64
