--- a/PopEngine.visualstudio/PopEngine_Uwp.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine_Uwp.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source">
@@ -193,6 +193,9 @@
       <Filter>SoyLib</Filter>
     </ClCompile>
     <ClCompile Include="..\src\SoyLib\src\SoyHttp.cpp">
+      <Filter>SoyLib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\SoyLib\src\SoyHttpConnection.cpp">
       <Filter>SoyLib</Filter>
     </ClCompile>
     <ClCompile Include="..\src\SoyLib\src\SoyImage.cpp">
