--- a/.github/workflows/Build_Apple.yml
+++ b/.github/workflows/Build_Apple.yml
@@ -35,3 +35,9 @@ jobs:
         with:
           BuildScheme: ${{ env.project }}_Universal
           project: ${{ env.project }}
+          
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ env.UPLOAD_NAME }}
+          path: ${{ env.UPLOAD_DIR }}
