Removed old xib's and storyboards for osx, renamed App scheme to OsxApp

--- a/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngineTestApp_Ios.xcscheme
+++ b/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngineTestApp_Ios.xcscheme
@@ -52,7 +52,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "UnitTest/Sokol/bootup.js"
+            argument = "UnitTest/UdpClient"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
