--- a/Source_App/PopEngineApp_Ios_Info.plist
+++ b/Source_App/PopEngineApp_Ios_Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string>SplashscreenBackground</string>
+		<key>UIImageName</key>
+		<string>AppIcon_Osx</string>
+	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -38,7 +45,8 @@
 				</dict>
 			</array>
 		</dict>
-	</dict>	<key>UIRequiredDeviceCapabilities</key>
+	</dict>
+	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
