--- a/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_OsxApp.xcscheme
+++ b/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_OsxApp.xcscheme
@@ -29,8 +29,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "BF5EB0532380335D0077BCF5"
-               BuildableName = "PopEngine.app"
-               BlueprintName = "PopEngine"
+               BuildableName = "PopEngine_OsxApp.app"
+               BlueprintName = "PopEngine_OsxApp"
                ReferencedContainer = "container:PopEngine.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -41,19 +41,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-      </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BF5EB0532380335D0077BCF5"
-            BuildableName = "PopEngine.app"
-            BlueprintName = "PopEngine"
+            BuildableName = "PopEngine_OsxApp.app"
+            BlueprintName = "PopEngine_OsxApp"
             ReferencedContainer = "container:PopEngine.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
+      <Testables>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug_JavascriptCore"
@@ -72,19 +70,21 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BF5EB0532380335D0077BCF5"
-            BuildableName = "PopEngine.app"
-            BlueprintName = "PopEngine"
+            BuildableName = "PopEngine_OsxApp.app"
+            BlueprintName = "PopEngine_OsxApp"
             ReferencedContainer = "container:PopEngine.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
+            argument = "$(SRCROOT)/UnitTest/Modules/Babeled/"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "/Volumes/Code/PopNotPoker/Server"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -97,8 +97,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BF5EB0532380335D0077BCF5"
-            BuildableName = "PopEngine.app"
-            BlueprintName = "PopEngine"
+            BuildableName = "PopEngine_OsxApp.app"
+            BlueprintName = "PopEngine_OsxApp"
             ReferencedContainer = "container:PopEngine.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
