We can now create "windows" via swift, by naming a window to a swift class which has a .window variable

--- a/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_OsxApp.xcscheme
+++ b/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_OsxApp.xcscheme
@@ -77,11 +77,15 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "$(SRCROOT)/UnitTest/Modules/Babeled/"
+            argument = "$(SRCROOT)/UnitTest/Gui"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "/Volumes/Code/PopNotPoker/Server"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "$(SRCROOT)/UnitTest/Modules/Babeled/"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
