--- a/.github/workflows/Build_Linux.yml
+++ b/.github/workflows/Build_Linux.yml
@@ -16,10 +16,10 @@ jobs:
     strategy:
       matrix:
         config:
-          - os: ubuntu-latest
+          - os: ubuntu-18.04
             type: linux
             
-          - os: ubuntu-latest
+          - os: ubuntu-18.04
             type: linux
             flag: osmesa
 
