--- a/.github/workflows/Create_Release.yml
+++ b/.github/workflows/Create_Release.yml
@@ -19,15 +19,18 @@ jobs:
     strategy:
       matrix:
         config:
-          - os: ubuntu-latest
+          - os: ubuntu-18.04
             type: linux
+            arch: x86_64
 
-          - os: ubuntu-latest
+          - os: ubuntu-18.04
             type: linux
+            arch: x86_64
             flag: osmesa
 
           - os: Nvidia
             type: linux
+            arch: arm64
 
           # - os: Pi4
           #   type: linux
